[metadata]
name = deephaven-example-app
description = Deephaven Example Application
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:deephaven_example_app.__version__
url = https://github.com/deephaven-examples/deephaven-server-pypi-app
project_urls =
    Source Code = https://github.com/deephaven-examples/deephaven-server-pypi-app
    Bug Tracker = https://github.com/deephaven-examples/deephaven-server-pypi-app/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
keywords = deephaven, streaming, websockets, coinbase
author = Devin Smith
author_email = devinsmith@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find:
install_requires =
    deephaven-server
    websocket-client

[options.packages.find]
where=src

[flake8]
max-line-length = 88
extend-ignore = E203, E402